--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,7 @@
 *{
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body{
     background-color: rgb(48, 48, 48);
@@ -11,7 +11,7 @@ body{
     text-align: center;
     margin: 20px;
     margin-bottom: 50px;
-    color: violet;
+    color: rgb(255, 59, 255);
     letter-spacing: 1px;
     word-spacing: 1px;
 }
@@ -60,6 +60,7 @@ body{
     justify-content: center;
     align-items: center;
     font-size: 30px;
+    cursor: pointer;
 }
 #winner{
     color:yellow;
@@ -85,4 +86,22 @@ h3{
 }
 #div3,#div6,#div9{
     border-right: none;
+}
+
+/* Responsive Site Design Goes Here */
+@media screen and (max-width:768px) {
+    #game_heading{
+        color: rgb(255, 51, 255);
+        letter-spacing: 1px;
+        word-spacing: 1px;
+        font-size: 40px;
+        margin: 50px 0px 70px 25px;
+    }
+    #game_container{
+        width: 90%;
+        margin: 0px auto;
+        height: 380px;
+        display: grid;
+        grid-template-columns: repeat(3,auto);
+    }
 }
